k8s/manifests-b380c0/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-b380c0
  namespace: journee
  labels:
    app: journee-b380c0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-b380c0
  template:
    metadata:
      labels:
        app: journee-b380c0
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-b380c0
          image: gcr.io/my-docker-471807/journee:b380c0-b1ed65
          ports:
            - containerPort: 3000
